education page overflow fixed

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -8,7 +8,7 @@
     transform: translateY(100px);
     transition: opacity 1s ease-out, transform 1s ease-out;
     height: 80vh;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .education-header-container.visible {
